# bk-scenario

./: .gitignore  AGENTS.md  Makefile  README.md
backend/: Makefile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 20260206_155123_389b3bf76691.py  20260225_160000_add_connectors_and_scope.py  20260225_170551_e320d2dcb932.py  20260225_180000_add_step_data.py  20260226_192241_bda659667590.py
backend/app/: config.py  connection.py  db.py  engine.py  logger.py  main.py  models.py  schema.py  storage.py  template.py
backend/config/: app.yaml.template
backend/db/: edges.sql  execution_steps.sql  executions.sql  global_vars.sql  init.sql  nodes.sql  rules.sql  stored_data.sql
backend/tests/: test_schema_relationships.py
docs/: 00-vision-and-principles.md  01-domain-model-and-concepts.md  02-rule-dsl-and-node-spec.md  03-execution-architecture.md  04-data-model-and-storage.md  05-api-contract-draft.md  06-dashboard-and-editor-spec.md  07-security-governance.md  08-roadmap-and-migration.md  README.md
frontend/: Makefile  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.js
frontend/src/: App.jsx  styles.css
frontend/src/__tests__/: NodeEditor.test.jsx  graphState.test.js
frontend/src/components/: NodeEditor.jsx  RuleNode.jsx  SettingsLayout.jsx  ThemeToggle.jsx
frontend/src/context/: ThemeContext.jsx
frontend/src/editor/: graphState.js  nodeMeta.js
frontend/src/pages/: Connections.jsx  Dashboard.jsx  Editor.jsx  Home.jsx  Settings.jsx
frontend/src/utils/: api.js
