[project]
name = "db-scenario"
version = "0.1.0"
description = "DB Scenario Pro"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.16.4",
    "fastapi>=0.128.1",
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "psycopg[binary]>=3.2.9",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.10.1",
    "pyyaml>=6.0.2",
    "sqlalchemy>=2.0.36",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.40.0",
]
